project-17-istio-service-mesh-platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication

metadata:
  name: default
  namespace: istio-demo

spec:

  mtls:
    mode: STRICT
