project-17-istio-service-mesh-platform/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: java-gateway

spec:

  selector:
    istio: ingressgateway

  servers:

  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "*"
