project-17-istio-service-mesh-platform/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: java-destination-rule

spec:

  host: java-service

  trafficPolicy:

    tls:
      mode: ISTIO_MUTUAL
